# coach_chess

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  run_dev.py  start.ps1
alembic/: env.py
alembic/versions/: 20260617_1522_initial_schema.py  20260617_1607_add_out_of_book_columns_and_deepest_.py  20260617_1709_exercise_source_move_id_unique.py  20260617_1750_extend_exercise_for_lichess_puzzles.py  20260617_1906_daily_plan_tables.py  20260617_1932_position_session_tables.py  (+14 more)
app/: main.py
app/api/: ocr.py  (+24 more)
scripts/: analyze_games.py  annotate_repertoire.py  backfill_themes.py  build_launcher.ps1  build_repertoire.py  coach_demo.py  coach_status.py  context.py  create_db.py  create_test_db.py  debrief.py  debug_analysis_status.py  debug_me.py  deep_analyze.py  detect_weaknesses.py  download_syzygy.py  dump_pgn.py  dump_pgn_to_file.py  exercise_peek.py  export_pgn.py  export_to_lichess.py  find_opponent.py  fix_is_me.py  generate_exercises.py  img2fen.py  img2fen_roundtrip.py  import_games.py  import_pgn_folder.py  install_launcher_shortcut.ps1  launcher.py  load_lichess_puzzles.py  load_openings.py  make_card.py  make_gif.py  next_elo.py  personality.py  pick_short_game.py  picker_peek.py  play.py  play_smoke.py  (+18 more)
tests/: conftest.py  factories.py  test_analyzer_classify.py  test_api_smoke.py  test_exercise_generator.py  test_exercise_picker.py  test_lesson_plan_budget.py  test_lesson_plan_compose.py  test_pgn_importer.py  test_srs.py  test_tactical_themes.py  test_weakness_engine.py
web/: package-lock.json  package.json
(+161 files in other folders)
