[project]
name = "coach-chess"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyserial>=3.5",
    "python-chess>=1.999",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "svglib>=2.0.2",
    "uvicorn[standard]>=0.49.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that hit Stockfish / Ollama (deselect with -m 'not slow')",
    "db: marks tests requiring the test Postgres database",
]
